; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_tsc200x-core.c_tsc200x_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_tsc200x-core.c_tsc200x_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.tsc200x = type { i32 }

@tsc200x_attr_group = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsc200x_remove(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.tsc200x*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.tsc200x* @dev_get_drvdata(%struct.device* %4)
  store %struct.tsc200x* %5, %struct.tsc200x** %3, align 8
  %6 = load %struct.device*, %struct.device** %2, align 8
  %7 = getelementptr inbounds %struct.device, %struct.device* %6, i32 0, i32 0
  %8 = call i32 @sysfs_remove_group(i32* %7, i32* @tsc200x_attr_group)
  %9 = load %struct.tsc200x*, %struct.tsc200x** %3, align 8
  %10 = getelementptr inbounds %struct.tsc200x, %struct.tsc200x* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @regulator_disable(i32 %11)
  ret i32 0
}

declare dso_local %struct.tsc200x* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @sysfs_remove_group(i32*, i32*) #1

declare dso_local i32 @regulator_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
